<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Copy password to clipboard -->
    <item
        android:id="@+id/passwords_context_menu__copy_button"
        android:title="@string/copy_password_to_clipboard"
        app:showAsAction="ifRoom">
    </item>

    <!-- Go to website -->
    <item
        android:id="@+id/passwords_context_menu__go_to_website_button"
        android:title="@string/go_to_website"
        app:showAsAction="ifRoom">
    </item>

    <!-- Edit -->
    <item
        android:id="@+id/passwords_context_menu__edit_button"
        android:title="@string/edit"
        app:showAsAction="ifRoom">
    </item>

    <!-- Delete -->
    <item
        android:id="@+id/passwords_context_menu__delete_button"
        android:title="@string/delete"
        app:showAsAction="ifRoom">
    </item>
</menu>