<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daniel.passwordsmanager.Activities.MajorActivities.PasswordGeneratorActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Generated password -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Generated password field -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/generator__password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/secondary_text_light_nodisable"
                    android:hint="@string/password_field_hint"/>

            </android.support.design.widget.TextInputLayout>

            <!-- Copy button -->
            <ImageButton
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/copy_icon"
                android:onClick="copyPassword"/>

        </RelativeLayout>

        <!-- Generated password power bar -->
        <ProgressBar
            android:id="@+id/generator__password_power_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:alpha="0.8"
            style="?android:attr/progressBarStyleHorizontal"/>

        <!-- Generated password power bar label -->
        <TextView
            android:id="@+id/generator__password_power_bar_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@android:color/secondary_text_light_nodisable"
            android:text="@string/password_power_bar_label"
            android:labelFor="@id/generator__password_power_bar"/>

        <!-- Length -->
        <LinearLayout
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Length label -->
            <TextView
                android:id="@+id/generator__length_label"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_length_label"
                style="@style/password_generator_text_style"/>

            <!-- Length seek bar -->
            <SeekBar
                android:id="@+id/generator__password_length_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="8"
                android:max="32"/>

        </LinearLayout>

        <!-- Small letters -->
        <CheckBox
            android:id="@+id/generator__small_letters_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/small_letters_label" />

        <!-- Big letters -->
        <CheckBox
            android:id="@+id/generator__big_letters_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/big_letters_checkbox_label" />

        <!-- Digits checkbox -->
        <CheckBox
            android:id="@+id/generator__digits_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/digits_label" />

        <!-- Special chars checkbox -->
        <CheckBox
            android:id="@+id/generator__special_chars_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/special_chars_label" />

        <!-- First char label -->
        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_generator_first_char_label"
            android:labelFor="@id/generator__first_char_radio_buttons"/>

        <!-- First char radio buttons -->
        <RadioGroup
            android:id="@+id/generator__first_char_radio_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- First char: small letter -->
            <RadioButton
                android:id="@+id/generator__first_char_small_letter_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/small_letter_label"/>

            <!-- First char: big letter -->
            <RadioButton
                android:id="@+id/generator__first_char_big_letter_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/big_letter_label"/>

            <!-- First char: digit -->
            <RadioButton
                android:id="@+id/generator__first_char_digit_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/digit_label"/>

            <!-- First char: special char -->
            <RadioButton
                android:id="@+id/generator__first_char_special_char_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/special_char_label"/>

        </RadioGroup>


        <!-- Password generator setup label -->
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_generator_setup_label"
            style="@style/password_generator_text_style"/>

        <!-- Generate random button -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/generate_password_button_text"
            android:onClick="generatePassword"
            style="@style/button_style"/>

        <!-- Generate random button -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_random_password_button_text"
            android:onClick="random"
            style="@style/button_style"/>

    </LinearLayout>


</ScrollView>
