<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daniel.passwordsmanager.Activities.MajorActivities.MainActivity">

    <!-- Toolbar -->
    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar" />

    <!-- Last successful login date -->
    <TextView
        android:id="@+id/last_login_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_below="@id/toolbar"
        android:text="@string/last_successful_login_date"
        android:textAppearance="@style/last_login_info_text_style"/>

    <!-- Last failed login date -->
    <TextView
        android:id="@+id/last_login_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_below="@id/last_login_success"
        android:text="@string/last_failed_login_date"
        android:textAppearance="@style/last_login_info_text_style"/>

    <!-- My passwords button -->
    <Button
        android:id="@+id/my_passwords_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_centerInParent="true"
        android:text="@string/my_passwords_button_text"
        android:onClick="startPasswordsActivity"
        style="@style/button_style" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/my_passwords_button">

        <!-- Password generator button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password_generator_button_text"
            android:onClick="startPasswordGeneratorActivity"
            style="@style/button_style" />

        <!-- Account settings button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_settings_button_text"
            android:onClick="startAccountSettingsActivity"
            style="@style/button_style" />

    </LinearLayout>


</RelativeLayout>
